1. policy updated 2. manage client updated 3. dashboard updated 4. log viewer added 	modified:   src/app/layouts/full/vertical/sidebar/sidebar-data.ts 	new file:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html 	new file:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.scss 	new file:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.spec.ts 	new file:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.ts 	new file:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html 	new file:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.scss 	new file:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.spec.ts 	new file:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.ts 	modified:   src/app/pages/apps/apps.module.ts 	modified:   src/app/pages/apps/apps.routing.ts 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.html 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.scss 	modified:   src/app/pages/apps/client-administraion/client-administraion.component.ts 	modified:   src/app/pages/apps/generateotp/generateotp.component.html 	new file:   src/app/pages/apps/listregclient/client-info/client-info.component.html 	new file:   src/app/pages/apps/listregclient/client-info/client-info.component.scss 	new file:   src/app/pages/apps/listregclient/client-info/client-info.component.spec.ts 	new file:   src/app/pages/apps/listregclient/client-info/client-info.component.ts 	modified:   src/app/pages/apps/listregclient/listregclient.component.html 	modified:   src/app/pages/apps/listregclient/listregclient.component.scss 	modified:   src/app/pages/apps/listregclient/listregclient.component.ts 	modified:   src/app/pages/apps/localadmin/localadmin.component.html

--- a/src/app/pages/apps/generateotp/generateotp.component.html
+++ b/src/app/pages/apps/generateotp/generateotp.component.html
@@ -9,7 +9,7 @@
         <div class="col-lg-6">
           <div style="display: flex;">
 
-            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">User Name</mat-label> <span
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">User Name</mat-label> <span class="hintText"
               style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Allow only
               letters (uppercase and lowercase) and numbers</span>
           </div>
@@ -32,7 +32,7 @@
 
           <div style="display: flex;">
 
-            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Contact Number</mat-label> <span
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Contact Number</mat-label> <span class="hintText"
               style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Must contain 10
               digit</span>
           </div>
@@ -59,7 +59,7 @@
         <div class="col-lg-6">
           <div style="display: flex;">
 
-            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Designation</mat-label> <span
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Designation</mat-label> <span class="hintText"
               style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Minimum 5
               characters & Special character not allowed</span>
           </div>
@@ -81,7 +81,7 @@
         <div class="col-lg-6">
           <div style="display: flex;">
 
-            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Rank</mat-label> <span
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Rank</mat-label> <span class="hintText"
               style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Minimum 3
               characters & Special character not allowed</span>
           </div>
