--- a/src/app/pages/apps/localadmin/localadmin.component.html
+++ b/src/app/pages/apps/localadmin/localadmin.component.html
@@ -61,7 +61,7 @@
                 <div style="display: flex;">
     
                   <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">User Name</mat-label>
-                   <span style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 10 characters</span>
+                   <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 10 characters</span>
                 </div>
                 <mat-form-field appearance="outline" class="w-100" color="primary">
                   <input matInput formControlName="username" required placeholder="Enter User Name"/>
@@ -112,7 +112,7 @@
                 <div style="display: flex;">
     
                   <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Password</mat-label>
-                  <span style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* 8-16 characters with 1 digit, 1 uppercase, and 1 lowercase letter.</span>
+                  <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* 8-16 characters with 1 digit, 1 uppercase, and 1 lowercase letter.</span>
                 </div>
     
                 <mat-form-field appearance="outline" class="w-100" color="primary">
