--- a/src/app/pages/apps/manageunit/manageunit.component.html
+++ b/src/app/pages/apps/manageunit/manageunit.component.html
@@ -35,7 +35,7 @@
                 <div style="display: flex;">
 
                   <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Unit Name
-                  </mat-label><span style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 10
+                  </mat-label><span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 10
                     character's and special character not allowed</span>
                 </div>
 
@@ -86,7 +86,7 @@
             <div style="display: flex;">
 
               <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Describe some information about unit
-              </mat-label> <span style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 200
+              </mat-label> <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 200
                 character's</span>
             </div>
             <mat-form-field appearance="outline" class="w-100 custom-form-field">
