--- a/src/app/pages/apps/client-administraion/client-administraion.component.html
+++ b/src/app/pages/apps/client-administraion/client-administraion.component.html
@@ -1,126 +1,80 @@
-<!-- --------------------------------------------------------------------- -->
-<!-- card 1 -->
-<!-- --------------------------------------------------------------------- -->
-
-
-
-
-<div class="row justify-content-center">
+<div class="row justify-content-center " id="clientPageTitle">
   <div class="col-sm-6 col-lg-4">
-    <a routerLink="/apps/listregclient" routerLinkActive="router-link-active" style="text-decoration: none">
-      <mat-card
-        class="cardWithShadow card2 position-relative card-hover"
-        style="cursor: pointer; min-height: 25vh"
-      >
-        <mat-card-content class="p-y-24" style="margin: auto">
-          <div style="display: flex; justify-content: center">
-            <span
-              class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
-            >
-              <mat-icon class="f-s-24">person</mat-icon>
-            </span>
-            <div style="margin-bottom: 70px"></div>
-          </div>
-          <mat-card-title style="display: flex; justify-content: center"
-            >List Of Registered Clients</mat-card-title
-          >
-        </mat-card-content>
-      </mat-card></a
-    >
-  </div>
+    <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor: pointer;" (click)="clientStatus(1)">
+      <mat-card-content style="margin: auto;">
+        <div style="display:flex; justify-content: center;">
+          <span class=" bg-accent rounded-circle" style="padding:10px">
 
-  <div class="col-sm-6 col-lg-4">
-    <a
-      routerLink="/apps/statusregclients"
-      routerLinkActive="router-link-active"
-      style="text-decoration: none"
-    >
-      <mat-card
-        class="cardWithShadow card2 position-relative card-hover"
-        style="cursor: pointer; min-height: 25vh"
-      >
-        <mat-card-content class="p-y-24" style="margin: auto">
-          <div style="display: flex; justify-content: center">
-            <span
-              class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
-            >
-              <mat-icon class="f-s-24">group_user</mat-icon>
-            </span>
-            <div style="margin-bottom: 70px"></div>
-          </div>
-
-          <mat-card-title style="display: flex; justify-content: center"
-            >Registered Client's Status</mat-card-title
-          >
-        </mat-card-content>
-      </mat-card>
-    </a>
-  </div>
-
-  <!-- <div class="col-sm-6 col-lg-4">
-    <mat-card
-      class="cardWithShadow card2 position-relative card-hover"
-      style="cursor: pointer; min-height: 25vh"
-    >
-      <mat-card-content class="p-y-24" style="margin: auto">
-        <div style="display: flex; justify-content: center">
-          <span
-            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
-          >
-            <mat-icon class="f-s-24">block</mat-icon>
+            <mat-icon  style="font-size:80px !important; height:80px; width:80px; color:white">list_alt</mat-icon>
           </span>
-          <div style="margin-bottom: 70px"></div>
         </div>
-        <mat-card-title style="display: flex; justify-content: center"
-          >Client Temporary Blocking</mat-card-title
-        >
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">List Of Registered Clients</mat-card-title>
       </mat-card-content>
     </mat-card>
   </div>
 
   <div class="col-sm-6 col-lg-4">
-    <mat-card
-      class="cardWithShadow card2 position-relative card-hover"
-      style="cursor: pointer; min-height: 25vh"
-    >
-      <mat-card-content class="p-y-24" style="margin: auto">
-        <div style="display: flex; justify-content: center">
-          <span
-            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
-          >
-            <mat-icon class="f-s-24">lock</mat-icon>
+    <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(2)">
+      <mat-card-content style="margin: auto;">
+        <div style="display:flex; justify-content: center;">
+          <span class=" bg-accent rounded-circle" style="padding:10px">
+
+            <mat-icon  style="font-size:80px !important; height:80px; width:80px; color:white">insert_chart</mat-icon>
           </span>
-
-          <div style="margin-bottom: 70px"></div>
         </div>
-
-        <mat-card-title style="display: flex; justify-content: center"
-          >List Of Blocked Client</mat-card-title
-        >
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Registered Client's Status</mat-card-title>
       </mat-card-content>
     </mat-card>
   </div>
-
-  <div class="col-sm-6 col-lg-4">
-    <mat-card
-      class="cardWithShadow card2 position-relative card-hover"
-      style="cursor: pointer; min-height: 25vh"
-    >
-      <mat-card-content class="p-y-24" style="margin: auto">
-        <div style="display: flex; justify-content: center">
-          <span
-            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
-          >
-            <mat-icon class="f-s-24">list</mat-icon>
-          </span>
-
-          <div style="margin-bottom: 70px"></div>
-        </div>
-        <mat-card-title style="display: flex; justify-content: center"
-          >List Of Deleted Client</mat-card-title
-        >
-      </mat-card-content>
-    </mat-card>
-  </div> -->
-
 </div>
+
+<div id="clientPageContent" style="display: none;">
+
+  <mat-card class="cardWithShadow " >
+    <mat-nav-list class="p-x-16">
+      <button mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+        [class.border-red]="formNo === 1" (click)="clientStatus(1)">
+        <span class="text-primary" style="display: flex;">
+          <i-tabler name="checkup-list" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler>
+          <span>
+            List Of Registered Clients
+          </span>
+        </span>
+      </button>
+  
+      <button mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+        [class.border-red]="formNo === 2" (click)="clientStatus(2)"> 
+        <span class="text-primary" style="display: flex;">
+          <!-- <i-tabler name="report-analytics" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler> -->
+          <mat-icon style="margin-right: 0.2rem">insert_chart</mat-icon>
+          <span>
+            Registered Client's Status
+          </span>
+        </span>
+      </button>
+    </mat-nav-list>
+  </mat-card>
+  
+  <mat-card  class="  cardWithShadow">
+    <mat-card-content class="p-24 bg-white">
+        
+  
+            <div *ngIf="formNo ==1">
+              
+              <app-listregclient></app-listregclient>
+            </div>
+  
+            <div *ngIf="formNo ==2">
+              
+              <app-regstatusclient></app-regstatusclient>
+            </div>
+  
+    </mat-card-content>
+  
+  </mat-card>
+</div>
+
+
+<!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+  <p class="text-white"> {{ loaderStatus }} </p>
+</ngx-spinner> -->
