--- a/src/app/pages/apps/policy-configuration/policy-configuration.component.scss
+++ b/src/app/pages/apps/policy-configuration/policy-configuration.component.scss
@@ -99,3 +99,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adjust the values based on your preference */
 }
 
+
+// .mat-mdc-form-field-subscript-wrapper{
+//   display: none !important;
+//   width:0px !important;
+// }
