--- a/src/app/pages/authentication/boxed-login/boxed-login.component.html
+++ b/src/app/pages/authentication/boxed-login/boxed-login.component.html
@@ -1,14 +1,30 @@
 <div class="blank-layout-container justify-content-center align-items-center">
   <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
     <div class="col-lg-4 d-flex align-items-center">
-      <mat-card class="cardWithShadow boxed-auth">
-        <mat-card-content class="p-32">
+      <mat-card class="cardWithShadow boxed-auth" style="min-width:660px; min-height:500px">
+        <!-- <h2 style="display: flex;justify-content: center; margin-top:25px; margin-bottom: 0px">Internet Security Operation Center</h2> -->
+
+        <!-- <h2 style="display: flex; justify-content: center; margin-top: 25px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+          Internet Security Operation Center
+        </h2> -->
+
+        <!-- <h2 style="display: flex; justify-content: center; margin-top: 25px; margin-bottom: 0px; white-space: nowrap; overflow: visible;">
+          Internet Security Operation Center
+        </h2>
+         -->
+        
+         <h2 style="display: flex; justify-content: center; margin-top: 25px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100%;">
+          <span style="font-size: 30px;margin-bottom: 15px;">Internet Security Operation Center</span>
+        </h2>
+        
+
+        <mat-card-content class="p-32" style="align-self: center;">
           <div class="text-center">
             <a [routerLink]="['/dashboards/dashboard1']" *ngIf="options.theme === 'light'">
 
 
             </a>
-            <h2 class="align-middle m-2">Internet Security Operation Center</h2>
+            <!-- <h2 class="align-middle m-2">Internet Security Operation Center</h2> -->
             <a [routerLink]="['/dashboards/dashboard1']" *ngIf="options.theme === 'dark'">
               <img src="./assets/images/logos/light-logo.svg" class="align-middle m-2" alt="logo" />
             </a>
@@ -26,7 +42,7 @@
             {{ loginError }}
           </div>
           <form class="m-t-30" [formGroup]="loginForm" (ngSubmit)="submit()">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput formControlName="username" placeholder="Enter Username" />
               <mat-icon matPrefix>
@@ -39,7 +55,7 @@
                 </div>
               </mat-hint>
             </mat-form-field>
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput [type]="passwordVisible ? 'text' : 'password'" formControlName="password"
                 placeholder="Enter Password" />
